feat: deploy user activation
